y.output
Terminaux inutilisés dans la grammaire

   tEMOJI
   tCONST
   tEXCLAM
   tG
   tERROR
   tIFEND


Grammaire

    0 $accept: start $end

    1 start: Fonctions

    2 Fonctions: Fonction Fonctions
    3          | %empty

    4 Fonction: Type_void tID tPARO Args_void tPARF Body

    5 $@1: %empty

    6 Fonction: Type_void tMAIN $@1 tPARO tPARF Body

    7 Type_void: Type
    8          | tVOID

    9 Args_void: Args
   10          | tVOID

   11 Type: tINT
   12     | tCHAR
   13     | tFLOAT
   14     | tCHARET
   15     | tBOOL

   16 Args: Arg Tv_args
   17     | %empty

   18 Arg: Type tID

   19 Tv_args: tV Arg Tv_args
   20        | %empty

   21 $@2: %empty

   22 Body: tACCO $@2 Lignes tACCF

   23 Lignes: Ligne Lignes
   24       | %empty

   25 Ligne: Affectation tPV

   26 Affectation: tID tEQV Expr

   27 Expr: tPARO Expr tPARF
   28     | Expr tPLUS Expr
   29     | Expr tMOINS Expr
   30     | Expr tMUL Expr
   31     | Expr tDIV Expr
   32     | Valeurs

   33 Ligne: Declaration tPV

   34 $@3: %empty

   35 Declaration: Type tID $@3 Decl_sans_type

   36 $@4: %empty

   37 $@5: %empty

   38 Declaration: Type tID $@4 tEQV Expr $@5 Decl_sans_type

   39 $@6: %empty

   40 Decl_sans_type: tV tID $@6 Decl_sans_type

   41 $@7: %empty

   42 $@8: %empty

   43 Decl_sans_type: tV tID $@7 tEQV Expr $@8 Decl_sans_type
   44               | %empty

   45 Valeurs: tID
   46        | tNUM
   47        | tDECIMAL
   48        | tSTRING
   49        | tCARACT
   50        | Boolean

   51 Boolean: tTRUE
   52        | tFALSE

   53 $@9: %empty

   54 Ligne: tIF tPARO Tests tPARF $@9 Body Else

   55 $@10: %empty

   56 Else: tELSE $@10 Body
   57     | %empty

   58 $@11: %empty

   59 $@12: %empty

   60 Ligne: tWHILE tPARO $@11 Tests tPARF $@12 Body

   61 Tests: Test And_or_Test

   62 Test: Expr Cond Expr
   63     | Expr

   64 And_or_Test: And_Or Test And_or_Test
   65            | %empty

   66 Cond: tSUP_EGAL
   67     | tINF_EGAL
   68     | tSUP
   69     | tINF
   70     | tEGAL
   71     | tDIFF

   72 And_Or: tAND
   73       | tOR

   74 Ligne: tRET Valeurs tPV
   75      | tPRINT tPARO Valeurs tPARF tPV


Terminaux, suivis des règles où ils apparaissent

$end (0) 0
error (256)
tEMOJI (258)
tMAIN (259) 6
tCONST (260)
tBOOL (261) 15
tINT (262) 11
tCHARET (263) 14
tCHAR (264) 12
tCARACT (265) 49
tFLOAT (266) 13
tRET (267) 74
tVOID (268) 8 10
tWHILE (269) 60
tIF (270) 54
tELSE (271) 56
tPRINT (272) 75
tPARO (273) 4 6 27 54 60 75
tPARF (274) 4 6 27 54 60 75
tACCO (275) 22
tACCF (276) 22
tEXCLAM (277)
tPLUS (278) 28
tMOINS (279) 29
tMUL (280) 30
tDIV (281) 31
tEQV (282) 26 38 43
tPV (283) 25 33 74 75
tV (284) 19 40 43
tG (285)
tNUM (286) 46
tSTRING (287) 48
tDECIMAL (288) 47
tID (289) 4 18 26 35 38 40 43 45
tERROR (290)
tSUP_EGAL (291) 66
tINF_EGAL (292) 67
tSUP (293) 68
tINF (294) 69
tEGAL (295) 70
tAND (296) 72
tOR (297) 73
tTRUE (298) 51
tFALSE (299) 52
tDIFF (300) 71
tIFEND (301)


Non-terminaux, suivis des règles où ils apparaissent

$accept (47)
    à gauche: 0
start (48)
    à gauche: 1, à droite: 0
Fonctions (49)
    à gauche: 2 3, à droite: 1 2
Fonction (50)
    à gauche: 4 6, à droite: 2
$@1 (51)
    à gauche: 5, à droite: 6
Type_void (52)
    à gauche: 7 8, à droite: 4 6
Args_void (53)
    à gauche: 9 10, à droite: 4
Type (54)
    à gauche: 11 12 13 14 15, à droite: 7 18 35 38
Args (55)
    à gauche: 16 17, à droite: 9
Arg (56)
    à gauche: 18, à droite: 16 19
Tv_args (57)
    à gauche: 19 20, à droite: 16 19
Body (58)
    à gauche: 22, à droite: 4 6 54 56 60
$@2 (59)
    à gauche: 21, à droite: 22
Lignes (60)
    à gauche: 23 24, à droite: 22 23
Ligne (61)
    à gauche: 25 33 54 60 74 75, à droite: 23
Affectation (62)
    à gauche: 26, à droite: 25
Expr (63)
    à gauche: 27 28 29 30 31 32, à droite: 26 27 28 29 30 31 38 43
    62 63
Declaration (64)
    à gauche: 35 38, à droite: 33
$@3 (65)
    à gauche: 34, à droite: 35
$@4 (66)
    à gauche: 36, à droite: 38
$@5 (67)
    à gauche: 37, à droite: 38
Decl_sans_type (68)
    à gauche: 40 43 44, à droite: 35 38 40 43
$@6 (69)
    à gauche: 39, à droite: 40
$@7 (70)
    à gauche: 41, à droite: 43
$@8 (71)
    à gauche: 42, à droite: 43
Valeurs (72)
    à gauche: 45 46 47 48 49 50, à droite: 32 74 75
Boolean (73)
    à gauche: 51 52, à droite: 50
$@9 (74)
    à gauche: 53, à droite: 54
Else (75)
    à gauche: 56 57, à droite: 54
$@10 (76)
    à gauche: 55, à droite: 56
$@11 (77)
    à gauche: 58, à droite: 60
$@12 (78)
    à gauche: 59, à droite: 60
Tests (79)
    à gauche: 61, à droite: 54 60
Test (80)
    à gauche: 62 63, à droite: 61 64
And_or_Test (81)
    à gauche: 64 65, à droite: 61 64
Cond (82)
    à gauche: 66 67 68 69 70 71, à droite: 62
And_Or (83)
    à gauche: 72 73, à droite: 64


État 0

    0 $accept: . start $end

    tBOOL    décalage et aller à l'état 1
    tINT     décalage et aller à l'état 2
    tCHARET  décalage et aller à l'état 3
    tCHAR    décalage et aller à l'état 4
    tFLOAT   décalage et aller à l'état 5
    tVOID    décalage et aller à l'état 6

    $défaut  réduction par utilisation de la règle 3 (Fonctions)

    start      aller à l'état 7
    Fonctions  aller à l'état 8
    Fonction   aller à l'état 9
    Type_void  aller à l'état 10
    Type       aller à l'état 11


État 1

   15 Type: tBOOL .

    $défaut  réduction par utilisation de la règle 15 (Type)


État 2

   11 Type: tINT .

    $défaut  réduction par utilisation de la règle 11 (Type)


État 3

   14 Type: tCHARET .

    $défaut  réduction par utilisation de la règle 14 (Type)


État 4

   12 Type: tCHAR .

    $défaut  réduction par utilisation de la règle 12 (Type)


État 5

   13 Type: tFLOAT .

    $défaut  réduction par utilisation de la règle 13 (Type)


État 6

    8 Type_void: tVOID .

    $défaut  réduction par utilisation de la règle 8 (Type_void)


État 7

    0 $accept: start . $end

    $end  décalage et aller à l'état 12


État 8

    1 start: Fonctions .

    $défaut  réduction par utilisation de la règle 1 (start)


État 9

    2 Fonctions: Fonction . Fonctions

    tBOOL    décalage et aller à l'état 1
    tINT     décalage et aller à l'état 2
    tCHARET  décalage et aller à l'état 3
    tCHAR    décalage et aller à l'état 4
    tFLOAT   décalage et aller à l'état 5
    tVOID    décalage et aller à l'état 6

    $défaut  réduction par utilisation de la règle 3 (Fonctions)

    Fonctions  aller à l'état 13
    Fonction   aller à l'état 9
    Type_void  aller à l'état 10
    Type       aller à l'état 11


État 10

    4 Fonction: Type_void . tID tPARO Args_void tPARF Body
    6         | Type_void . tMAIN $@1 tPARO tPARF Body

    tMAIN  décalage et aller à l'état 14
    tID    décalage et aller à l'état 15


État 11

    7 Type_void: Type .

    $défaut  réduction par utilisation de la règle 7 (Type_void)


État 12

    0 $accept: start $end .

    $défaut  accepter


État 13

    2 Fonctions: Fonction Fonctions .

    $défaut  réduction par utilisation de la règle 2 (Fonctions)


État 14

    6 Fonction: Type_void tMAIN . $@1 tPARO tPARF Body

    $défaut  réduction par utilisation de la règle 5 ($@1)

    $@1  aller à l'état 16


État 15

    4 Fonction: Type_void tID . tPARO Args_void tPARF Body

    tPARO  décalage et aller à l'état 17


État 16

    6 Fonction: Type_void tMAIN $@1 . tPARO tPARF Body

    tPARO  décalage et aller à l'état 18


État 17

    4 Fonction: Type_void tID tPARO . Args_void tPARF Body

    tBOOL    décalage et aller à l'état 1
    tINT     décalage et aller à l'état 2
    tCHARET  décalage et aller à l'état 3
    tCHAR    décalage et aller à l'état 4
    tFLOAT   décalage et aller à l'état 5
    tVOID    décalage et aller à l'état 19

    $défaut  réduction par utilisation de la règle 17 (Args)

    Args_void  aller à l'état 20
    Type       aller à l'état 21
    Args       aller à l'état 22
    Arg        aller à l'état 23


État 18

    6 Fonction: Type_void tMAIN $@1 tPARO . tPARF Body

    tPARF  décalage et aller à l'état 24


État 19

   10 Args_void: tVOID .

    $défaut  réduction par utilisation de la règle 10 (Args_void)


État 20

    4 Fonction: Type_void tID tPARO Args_void . tPARF Body

    tPARF  décalage et aller à l'état 25


État 21

   18 Arg: Type . tID

    tID  décalage et aller à l'état 26


État 22

    9 Args_void: Args .

    $défaut  réduction par utilisation de la règle 9 (Args_void)


État 23

   16 Args: Arg . Tv_args

    tV  décalage et aller à l'état 27

    $défaut  réduction par utilisation de la règle 20 (Tv_args)

    Tv_args  aller à l'état 28


État 24

    6 Fonction: Type_void tMAIN $@1 tPARO tPARF . Body

    tACCO  décalage et aller à l'état 29

    Body  aller à l'état 30


État 25

    4 Fonction: Type_void tID tPARO Args_void tPARF . Body

    tACCO  décalage et aller à l'état 29

    Body  aller à l'état 31


État 26

   18 Arg: Type tID .

    $défaut  réduction par utilisation de la règle 18 (Arg)


État 27

   19 Tv_args: tV . Arg Tv_args

    tBOOL    décalage et aller à l'état 1
    tINT     décalage et aller à l'état 2
    tCHARET  décalage et aller à l'état 3
    tCHAR    décalage et aller à l'état 4
    tFLOAT   décalage et aller à l'état 5

    Type  aller à l'état 21
    Arg   aller à l'état 32


État 28

   16 Args: Arg Tv_args .

    $défaut  réduction par utilisation de la règle 16 (Args)


État 29

   22 Body: tACCO . $@2 Lignes tACCF

    $défaut  réduction par utilisation de la règle 21 ($@2)

    $@2  aller à l'état 33


État 30

    6 Fonction: Type_void tMAIN $@1 tPARO tPARF Body .

    $défaut  réduction par utilisation de la règle 6 (Fonction)


État 31

    4 Fonction: Type_void tID tPARO Args_void tPARF Body .

    $défaut  réduction par utilisation de la règle 4 (Fonction)


État 32

   19 Tv_args: tV Arg . Tv_args

    tV  décalage et aller à l'état 27

    $défaut  réduction par utilisation de la règle 20 (Tv_args)

    Tv_args  aller à l'état 34


État 33

   22 Body: tACCO $@2 . Lignes tACCF

    tBOOL    décalage et aller à l'état 1
    tINT     décalage et aller à l'état 2
    tCHARET  décalage et aller à l'état 3
    tCHAR    décalage et aller à l'état 4
    tFLOAT   décalage et aller à l'état 5
    tRET     décalage et aller à l'état 35
    tWHILE   décalage et aller à l'état 36
    tIF      décalage et aller à l'état 37
    tPRINT   décalage et aller à l'état 38
    tID      décalage et aller à l'état 39

    $défaut  réduction par utilisation de la règle 24 (Lignes)

    Type         aller à l'état 40
    Lignes       aller à l'état 41
    Ligne        aller à l'état 42
    Affectation  aller à l'état 43
    Declaration  aller à l'état 44


État 34

   19 Tv_args: tV Arg Tv_args .

    $défaut  réduction par utilisation de la règle 19 (Tv_args)


État 35

   74 Ligne: tRET . Valeurs tPV

    tCARACT   décalage et aller à l'état 45
    tNUM      décalage et aller à l'état 46
    tSTRING   décalage et aller à l'état 47
    tDECIMAL  décalage et aller à l'état 48
    tID       décalage et aller à l'état 49
    tTRUE     décalage et aller à l'état 50
    tFALSE    décalage et aller à l'état 51

    Valeurs  aller à l'état 52
    Boolean  aller à l'état 53


État 36

   60 Ligne: tWHILE . tPARO $@11 Tests tPARF $@12 Body

    tPARO  décalage et aller à l'état 54


État 37

   54 Ligne: tIF . tPARO Tests tPARF $@9 Body Else

    tPARO  décalage et aller à l'état 55


État 38

   75 Ligne: tPRINT . tPARO Valeurs tPARF tPV

    tPARO  décalage et aller à l'état 56


État 39

   26 Affectation: tID . tEQV Expr

    tEQV  décalage et aller à l'état 57


État 40

   35 Declaration: Type . tID $@3 Decl_sans_type
   38            | Type . tID $@4 tEQV Expr $@5 Decl_sans_type

    tID  décalage et aller à l'état 58


État 41

   22 Body: tACCO $@2 Lignes . tACCF

    tACCF  décalage et aller à l'état 59


État 42

   23 Lignes: Ligne . Lignes

    tBOOL    décalage et aller à l'état 1
    tINT     décalage et aller à l'état 2
    tCHARET  décalage et aller à l'état 3
    tCHAR    décalage et aller à l'état 4
    tFLOAT   décalage et aller à l'état 5
    tRET     décalage et aller à l'état 35
    tWHILE   décalage et aller à l'état 36
    tIF      décalage et aller à l'état 37
    tPRINT   décalage et aller à l'état 38
    tID      décalage et aller à l'état 39

    $défaut  réduction par utilisation de la règle 24 (Lignes)

    Type         aller à l'état 40
    Lignes       aller à l'état 60
    Ligne        aller à l'état 42
    Affectation  aller à l'état 43
    Declaration  aller à l'état 44


État 43

   25 Ligne: Affectation . tPV

    tPV  décalage et aller à l'état 61


État 44

   33 Ligne: Declaration . tPV

    tPV  décalage et aller à l'état 62


État 45

   49 Valeurs: tCARACT .

    $défaut  réduction par utilisation de la règle 49 (Valeurs)


État 46

   46 Valeurs: tNUM .

    $défaut  réduction par utilisation de la règle 46 (Valeurs)


État 47

   48 Valeurs: tSTRING .

    $défaut  réduction par utilisation de la règle 48 (Valeurs)


État 48

   47 Valeurs: tDECIMAL .

    $défaut  réduction par utilisation de la règle 47 (Valeurs)


État 49

   45 Valeurs: tID .

    $défaut  réduction par utilisation de la règle 45 (Valeurs)


État 50

   51 Boolean: tTRUE .

    $défaut  réduction par utilisation de la règle 51 (Boolean)


État 51

   52 Boolean: tFALSE .

    $défaut  réduction par utilisation de la règle 52 (Boolean)


État 52

   74 Ligne: tRET Valeurs . tPV

    tPV  décalage et aller à l'état 63


État 53

   50 Valeurs: Boolean .

    $défaut  réduction par utilisation de la règle 50 (Valeurs)


État 54

   60 Ligne: tWHILE tPARO . $@11 Tests tPARF $@12 Body

    $défaut  réduction par utilisation de la règle 58 ($@11)

    $@11  aller à l'état 64


État 55

   54 Ligne: tIF tPARO . Tests tPARF $@9 Body Else

    tCARACT   décalage et aller à l'état 45
    tPARO     décalage et aller à l'état 65
    tNUM      décalage et aller à l'état 46
    tSTRING   décalage et aller à l'état 47
    tDECIMAL  décalage et aller à l'état 48
    tID       décalage et aller à l'état 49
    tTRUE     décalage et aller à l'état 50
    tFALSE    décalage et aller à l'état 51

    Expr     aller à l'état 66
    Valeurs  aller à l'état 67
    Boolean  aller à l'état 53
    Tests    aller à l'état 68
    Test     aller à l'état 69


État 56

   75 Ligne: tPRINT tPARO . Valeurs tPARF tPV

    tCARACT   décalage et aller à l'état 45
    tNUM      décalage et aller à l'état 46
    tSTRING   décalage et aller à l'état 47
    tDECIMAL  décalage et aller à l'état 48
    tID       décalage et aller à l'état 49
    tTRUE     décalage et aller à l'état 50
    tFALSE    décalage et aller à l'état 51

    Valeurs  aller à l'état 70
    Boolean  aller à l'état 53


État 57

   26 Affectation: tID tEQV . Expr

    tCARACT   décalage et aller à l'état 45
    tPARO     décalage et aller à l'état 65
    tNUM      décalage et aller à l'état 46
    tSTRING   décalage et aller à l'état 47
    tDECIMAL  décalage et aller à l'état 48
    tID       décalage et aller à l'état 49
    tTRUE     décalage et aller à l'état 50
    tFALSE    décalage et aller à l'état 51

    Expr     aller à l'état 71
    Valeurs  aller à l'état 67
    Boolean  aller à l'état 53


État 58

   35 Declaration: Type tID . $@3 Decl_sans_type
   38            | Type tID . $@4 tEQV Expr $@5 Decl_sans_type

    tEQV      réduction par utilisation de la règle 36 ($@4)
    $défaut  réduction par utilisation de la règle 34 ($@3)

    $@3  aller à l'état 72
    $@4  aller à l'état 73


État 59

   22 Body: tACCO $@2 Lignes tACCF .

    $défaut  réduction par utilisation de la règle 22 (Body)


État 60

   23 Lignes: Ligne Lignes .

    $défaut  réduction par utilisation de la règle 23 (Lignes)


État 61

   25 Ligne: Affectation tPV .

    $défaut  réduction par utilisation de la règle 25 (Ligne)


État 62

   33 Ligne: Declaration tPV .

    $défaut  réduction par utilisation de la règle 33 (Ligne)


État 63

   74 Ligne: tRET Valeurs tPV .

    $défaut  réduction par utilisation de la règle 74 (Ligne)


État 64

   60 Ligne: tWHILE tPARO $@11 . Tests tPARF $@12 Body

    tCARACT   décalage et aller à l'état 45
    tPARO     décalage et aller à l'état 65
    tNUM      décalage et aller à l'état 46
    tSTRING   décalage et aller à l'état 47
    tDECIMAL  décalage et aller à l'état 48
    tID       décalage et aller à l'état 49
    tTRUE     décalage et aller à l'état 50
    tFALSE    décalage et aller à l'état 51

    Expr     aller à l'état 66
    Valeurs  aller à l'état 67
    Boolean  aller à l'état 53
    Tests    aller à l'état 74
    Test     aller à l'état 69


État 65

   27 Expr: tPARO . Expr tPARF

    tCARACT   décalage et aller à l'état 45
    tPARO     décalage et aller à l'état 65
    tNUM      décalage et aller à l'état 46
    tSTRING   décalage et aller à l'état 47
    tDECIMAL  décalage et aller à l'état 48
    tID       décalage et aller à l'état 49
    tTRUE     décalage et aller à l'état 50
    tFALSE    décalage et aller à l'état 51

    Expr     aller à l'état 75
    Valeurs  aller à l'état 67
    Boolean  aller à l'état 53


État 66

   28 Expr: Expr . tPLUS Expr
   29     | Expr . tMOINS Expr
   30     | Expr . tMUL Expr
   31     | Expr . tDIV Expr
   62 Test: Expr . Cond Expr
   63     | Expr .

    tPLUS      décalage et aller à l'état 76
    tMOINS     décalage et aller à l'état 77
    tMUL       décalage et aller à l'état 78
    tDIV       décalage et aller à l'état 79
    tSUP_EGAL  décalage et aller à l'état 80
    tINF_EGAL  décalage et aller à l'état 81
    tSUP       décalage et aller à l'état 82
    tINF       décalage et aller à l'état 83
    tEGAL      décalage et aller à l'état 84
    tDIFF      décalage et aller à l'état 85

    $défaut  réduction par utilisation de la règle 63 (Test)

    Cond  aller à l'état 86


État 67

   32 Expr: Valeurs .

    $défaut  réduction par utilisation de la règle 32 (Expr)


État 68

   54 Ligne: tIF tPARO Tests . tPARF $@9 Body Else

    tPARF  décalage et aller à l'état 87


État 69

   61 Tests: Test . And_or_Test

    tAND  décalage et aller à l'état 88
    tOR   décalage et aller à l'état 89

    $défaut  réduction par utilisation de la règle 65 (And_or_Test)

    And_or_Test  aller à l'état 90
    And_Or       aller à l'état 91


État 70

   75 Ligne: tPRINT tPARO Valeurs . tPARF tPV

    tPARF  décalage et aller à l'état 92


État 71

   26 Affectation: tID tEQV Expr .
   28 Expr: Expr . tPLUS Expr
   29     | Expr . tMOINS Expr
   30     | Expr . tMUL Expr
   31     | Expr . tDIV Expr

    tPLUS   décalage et aller à l'état 76
    tMOINS  décalage et aller à l'état 77
    tMUL    décalage et aller à l'état 78
    tDIV    décalage et aller à l'état 79

    $défaut  réduction par utilisation de la règle 26 (Affectation)


État 72

   35 Declaration: Type tID $@3 . Decl_sans_type

    tV  décalage et aller à l'état 93

    $défaut  réduction par utilisation de la règle 44 (Decl_sans_type)

    Decl_sans_type  aller à l'état 94


État 73

   38 Declaration: Type tID $@4 . tEQV Expr $@5 Decl_sans_type

    tEQV  décalage et aller à l'état 95


État 74

   60 Ligne: tWHILE tPARO $@11 Tests . tPARF $@12 Body

    tPARF  décalage et aller à l'état 96


État 75

   27 Expr: tPARO Expr . tPARF
   28     | Expr . tPLUS Expr
   29     | Expr . tMOINS Expr
   30     | Expr . tMUL Expr
   31     | Expr . tDIV Expr

    tPARF   décalage et aller à l'état 97
    tPLUS   décalage et aller à l'état 76
    tMOINS  décalage et aller à l'état 77
    tMUL    décalage et aller à l'état 78
    tDIV    décalage et aller à l'état 79


État 76

   28 Expr: Expr tPLUS . Expr

    tCARACT   décalage et aller à l'état 45
    tPARO     décalage et aller à l'état 65
    tNUM      décalage et aller à l'état 46
    tSTRING   décalage et aller à l'état 47
    tDECIMAL  décalage et aller à l'état 48
    tID       décalage et aller à l'état 49
    tTRUE     décalage et aller à l'état 50
    tFALSE    décalage et aller à l'état 51

    Expr     aller à l'état 98
    Valeurs  aller à l'état 67
    Boolean  aller à l'état 53


État 77

   29 Expr: Expr tMOINS . Expr

    tCARACT   décalage et aller à l'état 45
    tPARO     décalage et aller à l'état 65
    tNUM      décalage et aller à l'état 46
    tSTRING   décalage et aller à l'état 47
    tDECIMAL  décalage et aller à l'état 48
    tID       décalage et aller à l'état 49
    tTRUE     décalage et aller à l'état 50
    tFALSE    décalage et aller à l'état 51

    Expr     aller à l'état 99
    Valeurs  aller à l'état 67
    Boolean  aller à l'état 53


État 78

   30 Expr: Expr tMUL . Expr

    tCARACT   décalage et aller à l'état 45
    tPARO     décalage et aller à l'état 65
    tNUM      décalage et aller à l'état 46
    tSTRING   décalage et aller à l'état 47
    tDECIMAL  décalage et aller à l'état 48
    tID       décalage et aller à l'état 49
    tTRUE     décalage et aller à l'état 50
    tFALSE    décalage et aller à l'état 51

    Expr     aller à l'état 100
    Valeurs  aller à l'état 67
    Boolean  aller à l'état 53


État 79

   31 Expr: Expr tDIV . Expr

    tCARACT   décalage et aller à l'état 45
    tPARO     décalage et aller à l'état 65
    tNUM      décalage et aller à l'état 46
    tSTRING   décalage et aller à l'état 47
    tDECIMAL  décalage et aller à l'état 48
    tID       décalage et aller à l'état 49
    tTRUE     décalage et aller à l'état 50
    tFALSE    décalage et aller à l'état 51

    Expr     aller à l'état 101
    Valeurs  aller à l'état 67
    Boolean  aller à l'état 53


État 80

   66 Cond: tSUP_EGAL .

    $défaut  réduction par utilisation de la règle 66 (Cond)


État 81

   67 Cond: tINF_EGAL .

    $défaut  réduction par utilisation de la règle 67 (Cond)


État 82

   68 Cond: tSUP .

    $défaut  réduction par utilisation de la règle 68 (Cond)


État 83

   69 Cond: tINF .

    $défaut  réduction par utilisation de la règle 69 (Cond)


État 84

   70 Cond: tEGAL .

    $défaut  réduction par utilisation de la règle 70 (Cond)


État 85

   71 Cond: tDIFF .

    $défaut  réduction par utilisation de la règle 71 (Cond)


État 86

   62 Test: Expr Cond . Expr
